# EmoYoki

./: .gitignore  README.md  index.html
.claude/: settings.json
Doc/: Artractive.pem  Database Design.md  Deployment_Report_2026-04-15.md  Design System.md  EC2_배포_가이드.md  PRD.md  TRD.md  Tasks.md  Todo.md  UserFlow.md  로컬_테스트_가이드.md  인증_보안_가이드.md
Source/: .env.example  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json
Source/backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_server.py
Source/backend/app/: __init__.py  create_tables.py
Source/backend/app/api/: __init__.py  auth.py  deps.py  tasks.py  test.py
Source/backend/app/core/: config.py  database.py  security.py
Source/backend/app/models/: __init__.py  base.py  task.py  user.py
Source/backend/app/schemas/: __init__.py  review.py  task.py  user.py
Source/backend/app/services/: __init__.py  auth_service.py  task_service.py
Source/backend/app/utils/: __init__.py  s3.py  sms.py
Source/frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  test.html  vite.config.ts
Source/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
Source/frontend/src/components/: KakaoMap.tsx  Layout.tsx  ProtectedRoute.tsx
Source/frontend/src/pages/: HelperDashboard.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  TaskCreatePage.tsx  TaskDetailPage.tsx  TestPage.tsx  UserDashboard.tsx
Source/frontend/src/services/: api.ts  authService.ts  index.ts  taskService.ts
(+3 files in other folders)
